--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="シンプルな掲示板｡好きな内容を語り合おう｡" />
+    <meta name="keyword" content="掲示板､コミュニティ､初心者､React､TechTrain" />
+    <meta property="og:title" content="掲示板アプリ - 興味のあるトピックで自由に交流" />
+    <meta property="og:description" content="シンプルな掲示板｡好きな内容を語り合おう｡" />
+    <meta property="og:url" content="https://localhost:5173" />
+    <meta property="og:type" content="website" />
+    <meta name="language" content="ja" />
+    <meta name="geo.region" content="JP" />
+    <meta name="geo.placename" content="Japan" />
+    <title>掲示板アプリ</title>
   </head>
   <body>
     <div id="root"></div>
